--- a/styles/base.css
+++ b/styles/base.css
@@ -5,15 +5,18 @@
 }
 
 :root {
-  --background: #A6CDC6;
-  --secondryBackground: #FBF5DD;
-  --navy: #16404D;
-  --orange: #DDA853;
-  --text: #f5f5f5;
+  --background: #DBEDF3;
+  --secondryBackground: #283149;
+  --navy: #404B69;
+  --green: #00818A;
+  --white: #ffffff;
+  --text1: white;
+  --text2: rgba(245, 245, 245, 0.808);
 }
 
 body {
   background-color: var(--background);
+  color: var(--text);
 }
 
 .flex-container {
