--- a/styles/app.css
+++ b/styles/app.css
@@ -9,7 +9,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 4rem 8rem;
+  padding: 3.7rem 8rem;
 }
 
 .task-input-box {
@@ -58,6 +58,7 @@ main {
 
 .navigation {
   width: 80%;
+  margin-bottom: 2.7rem;
 }
 
 .nav-tabs {
@@ -91,3 +92,86 @@ main {
   color: var(--linkColor);
 }
 
+.todo-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  width: 80%;
+}
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  gap: 1rem;
+  /* padding: 1rem; */
+  background-color: var(--background);
+  /* box-shadow: 0px 0px 1px var(--navy);
+  border-radius: 6px; */
+}
+
+.todo-list-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.6rem;
+  padding: 1rem;
+  border-radius: 6px;
+  background-color: var(--background-dark);
+  box-shadow: 1px 1px 10px var(--navy);
+}
+
+.todo-info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.todo-controls {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 0.7rem;
+}
+
+.todo-buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 0.6rem;
+  align-items: center;
+}
+
+.todo-checkbox {
+  width: 15px;
+  height: 15px;
+}
+
+.todo-name {
+  color: var(--navy);
+  font-weight: 500;
+}
+
+.edit-button {
+  all: unset;
+  color: var(--purple);
+  border: none;
+  cursor: pointer;
+}
+
+.delete-button {
+  all: unset;
+  color: var(--red);
+  cursor: pointer;
+}
+
+.todo-date {
+  color: var(--navy);
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+
+button svg {
+  transform: scale(1.2);
+}
