Add responsive styles

--- a/styles/base.css
+++ b/styles/base.css
@@ -10,7 +10,8 @@
   --secondryBackground: #283149;
   --linkColor: #3674B5;
   --navy: #404B69;
-  --green: #00818A;
+  --green1: #00818A;
+  --green2: #57A6A1;
   --blue: #4DA8DA;
   --white: #ffffff;
   --red: #D21312;
