--- a/styles/app.css
+++ b/styles/app.css
@@ -24,7 +24,7 @@ main {
   margin-bottom: 2.7rem;
 }
 
-.todo-name {
+.todo-name-input {
   flex: 1;
   border-color: transparent;
   outline: none;
@@ -132,14 +132,15 @@ main {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.8rem;
+  text-wrap: wrap;
 }
 
 .todo-controls {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  gap: 0.7rem;
+  gap: 0.8rem;
 }
 
 .todo-buttons {
@@ -174,7 +175,7 @@ main {
 
 .todo-date {
   color: var(--navy);
-  font-size: 0.8rem;
+  font-size: 0.85rem;
   font-weight: 500;
 }
 
@@ -192,6 +193,7 @@ button svg {
   box-shadow: 1px 1px 10px var(--navy);
   margin-left: 4rem;
   flex-shrink: 0;
+  height: 10rem;
 }
 
 .details {
