--- a/styles/app.css
+++ b/styles/app.css
@@ -110,10 +110,7 @@ main {
   flex-direction: column;
   list-style: none;
   gap: 1rem;
-  /* padding: 1rem; */
   background-color: var(--background);
-  /* box-shadow: 0px 0px 1px var(--navy);
-  border-radius: 6px; */
 }
 
 .todo-list-item {
@@ -158,6 +155,8 @@ main {
 .todo-name {
   color: var(--navy);
   font-weight: 500;
+  max-width: 22rem;
+  word-wrap: break-word;
 }
 
 .edit-button {
@@ -177,6 +176,7 @@ main {
   color: var(--navy);
   font-size: 0.85rem;
   font-weight: 500;
+  white-space: nowrap;
 }
 
 button svg {
@@ -288,6 +288,12 @@ button svg {
   }
 }
 
+@media (max-width: 768px) {
+  .todo-name {
+    width: 15rem;
+  }
+}
+
 @media (max-width: 600px) {
   .nav-tabs {
     gap: 1rem;
@@ -305,3 +311,4 @@ button svg {
     font-size: 1.2rem;
   }
 }
+
