Implement edit modal component and styles

--- a/styles/base.css
+++ b/styles/base.css
@@ -10,6 +10,7 @@
   --secondryBackground: #283149;
   --linkColor: #3674B5;
   --navy: #404B69;
+  --navy2: #5f677e;
   --green1: #00818A;
   --green2: #57A6A1;
   --blue: #4DA8DA;
