--- a/styles/app.css
+++ b/styles/app.css
@@ -270,7 +270,7 @@ button svg {
   flex-shrink: 0;
 }
 
-.numbers {
+#numbers {
   color: var(--background);
   font-size: 1.3rem;
   font-weight: bold;
@@ -346,7 +346,7 @@ button svg {
     font-size: 1rem;
   }
 
-  .numbers {
+  #numbers {
     font-size: 1.2rem;
   }
 }
