--- a/styles/header.css
+++ b/styles/header.css
@@ -3,7 +3,7 @@
 }
 
 .todo-banner {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   left: 0;
@@ -11,6 +11,7 @@
   width: 100%;
   height: 8rem;
   box-shadow: 1px 1px 20px var(--secondryBackground);
+  z-index: 100;
 }
 
 @media (max-width: 768px) {
