--- a/styles/app.css
+++ b/styles/app.css
@@ -284,7 +284,8 @@ button svg {
   background-color: var(--green2);
   height: 1rem;
   border-radius: 10px;
-  transition: all 4s ease;
+  width: 0;
+  transition: width 0.4s ease;
 }
 
 .stats-numbers {
