--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,7 +1,7 @@
 .modal {
   display: none;
   position: fixed; 
-  z-index: 1; 
+  z-index: 200; 
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -27,6 +27,10 @@
   background-color: var(--navy);
   padding: 1rem 1.7rem;
   color: var(--text1);
+}
+
+.modal-header h2 {
+  text-wrap: nowrap;
 }
 
 .close-modal {
@@ -96,4 +100,21 @@
   background-color: var(--text2);
   border-color: var(--navy2);
   color: var(--navy2);
+}
+
+@media (max-width: 1200px) {
+  .modal-content {
+    width: 70%;
+    max-width: 300px;
+  }
+
+  .edit-name-input,
+  .edit-date-input {
+    width: 100%;
+  }
+
+  .update-button,
+  .cancel-edit-button {
+    padding: 0.6rem 1rem;
+  }
 }
